# From-Scratch-Neural-Net-Training-Dashboard

./: .cursorrules  .gitignore  CLAUDE.md  GEMINI.md  README.md  SESSION_NOTES.md  environment.ci.yaml  environment.yaml  project_structure.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml
backend/: main.py  routes.py  schemas.py  stream.py
dashboard/: app.py
frontend/: package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.jsx
frontend/src/api/: client.js
frontend/src/components/charts/: AccuracyCurve.jsx  LRSchedule.jsx  LossCurve.jsx
frontend/src/components/config/: AdvancedConfig.jsx  LayerCard.jsx  SimpleConfig.jsx
frontend/src/components/dashboard/: Controls.jsx  MetricsBar.jsx
frontend/src/hooks/: useOptions.js  useTrainingStream.js
model/: __init__.py  activations.py  configs.py  layers.py  losses.py  network.py  optimizers.py  presets.py  registry.py
tests/: test_activations.py  test_configs.py  test_layers.py  test_losses.py  test_network.py  test_optimizers.py  test_registry.py
tests/model/: test_configs.py  test_layers.py  test_network.py
tests/training/: test_configs.py  test_data.py  test_logger.py  test_registry.py
training/: __init__.py  analysis.py  configs.py  data.py  device.py  logger.py  registry.py  trainer.py
